// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Common: Button: Anchor element button renders correctly 1`] = `
<a
  className="button"
  href="/somewhere"
>
  An external link
</a>
`;

exports[`Components : Common: Button: Anchor element button renders correctly 2`] = `
<a
  className="button button-big"
  href="/somewhere"
>
  A big external link
</a>
`;

exports[`Components : Common: Button: Button element renders correctly 1`] = `
<button
  className="button"
  type="button"
>
  A button
</button>
`;

exports[`Components : Common: Button: Button element renders correctly 2`] = `
<button
  className="button button-big"
  type="button"
>
  A button
</button>
`;

exports[`Components : Common: Button: Button element renders correctly 3`] = `
<button
  className="button"
  type="submit"
>
  A button
</button>
`;

exports[`Components : Common: Button: Link component button renders correctly 1`] = `
<a
  className="button"
  href="/somewhere"
>
  An internal link
</a>
`;

exports[`Components : Common: Button: Link component button renders correctly 2`] = `
<a
  className="button button-big"
  href="/somewhere"
>
  A big internal link
</a>
`;
